 * Added screen citiation formats for headers of EPrint and User screens.
 * Modified generate_static to find title and body directly rather than
    use XML::find_elements
 * Removed now unused XML::find_elements

2006-10-23 cjg
 * Login now no longer talks about IPs and sessions. We can maybe add those
    features later.

2006-10-23 cjg
 * Fixed bug in oai2, rss and latest_tool which was looking for the config
    option 
 * Added "n" to latest_tool to make it render result citation correctly

2006-10-24 tdb
 * Added LibXML DOM option
 * Modified to_dom to use isa (otherwise inheritence will break comparison)
 * Added dom_compare tool to, er, compare DOM implementations

2006-10-24 cjg
 * Moved use Apache::SubProcess into AnApache so it handles mod_perl 1.99 
    correctly.

2006-10-24 moj
 * Created render_action_button in Screen that is used by action_bar and
    action_list. 
 * Added render_action_button_if_allowed - only returns a button if it is
    allowed to be viewed. Returns an empty doc fragment otherwise.
 * Created 'allowed' to return true if an action is allowed (used by 
    action_list and render_action_button_if_allowed)

2006-10-24 moj
 * Added 'has_stalled' to Index - returns true if the tick file is out of
    date.
 * Added 'force_start' to Index - stops the indexer (with no checking of the
    result - just to kill off any remaining process), unlinks the pid and tick
    files, and then starts the indexer and returns the result.
 * Added force_start_indexer to the Admin/Index screen
 * Rejigged Screen.pl to take $params (a hash array that can contain 'hidden').
    This replaces 'passthrough'.
 * Added Admin.pm. This warns if the indexer is not started, or needs force
    restarting, with buttons to carry these out. It also shows a list of
    available admin tools. 
 * Added the relevant phrases for the start/stop/force_start
 * Adjusted indexer.pl to use has_stalled
 * Added necessary roles to User.pm