@@ -40,10 +40,7 @@ $c->{user_roles}->{admin} = [qw/
 	editor
 	view-status
 	staff-view
-	edit-subject
-	edit-user
-	admin-indexer
-	admin-config
+	admin
 /],
 
 
