@@ -504,6 +504,10 @@ User Area CGI Scripts
 
     <epp:phrase id="cgi/users/status:release">EPrints Release:</epp:phrase>
     <epp:phrase id="cgi/users/status:database">Database Status:</epp:phrase>
+    <epp:phrase id="cgi/users/status:indexer">Indexer Status:</epp:phrase>
+    <epp:phrase id="cgi/users/status:indexer_running">Running</epp:phrase>
+    <epp:phrase id="cgi/users/status:indexer_stopped">Stopped</epp:phrase>
+    <epp:phrase id="cgi/users/status:indexer_stalled">Stalled</epp:phrase>
     <epp:phrase id="cgi/users/status:users">Total Users:</epp:phrase>
     <epp:phrase id="cgi/users/status:usertitle"><h2>Users</h2></epp:phrase>
     <epp:phrase id="cgi/users/status:articles"><h2>Items</h2></epp:phrase>
@@ -520,9 +524,9 @@ User Area CGI Scripts
     <epp:phrase id="cgi/users/status:out_of_space"><span class="alert">NO DISK SPACE LEFT!</span></epp:phrase>
     <epp:phrase id="cgi/users/status:nearly_out_of_space"><span class="alert">WARNING:</span> Available space for new items is running low</epp:phrase>
     <epp:phrase id="cgi/users/status:title">Server Status</epp:phrase>
-    <epp:phrase id="Plugin/Screen/Admin:title">Repository Administration</epp:phrase>
-    <epp:phrase id="Plugin/Screen/Admin:indexer_not_running">The full-text indexer is not currently running. You should start it to ensure full-text searching operates correctly. <epc:pin name="start_button" /></epp:phrase>
-    <epp:phrase id="Plugin/Screen/Admin:indexer_stalled">The full-text indexer appears to have stalled. You may need to force restart it to ensure full-text searching operates correctly. <epc:pin name="force_start_button" /></epp:phrase>
+    <epp:phrase id="Plugin/Screen/Admin:title">Administration</epp:phrase>
+    <epp:phrase id="Plugin/Screen/Status:indexer_not_running">The full-text indexer is not currently running. You should start it to ensure full-text searching operates correctly. <epc:pin name="start_button" /></epp:phrase>
+    <epp:phrase id="Plugin/Screen/Status:indexer_stalled">The full-text indexer appears to have stalled. You may need to force restart it to ensure full-text searching operates correctly. <epc:pin name="force_start_button" /></epp:phrase>
     <epp:phrase id="Plugin/Screen/Admin/Indexer:action:force_start_indexer:title">Force Start Indexer</epp:phrase>
     <epp:phrase id="Plugin/Screen/Admin/Indexer:action:force_start_indexer:description">Forcefully stops and cleans up the indexer, then restarts it.</epp:phrase>
     <epp:phrase id="Plugin/Screen/Admin/Indexer:action:start_indexer:title">Start Indexer</epp:phrase>
@@ -531,8 +535,8 @@ User Area CGI Scripts
     <epp:phrase id="Plugin/Screen/Admin/Indexer:action:stop_indexer:description">Stops the full-text indexer.</epp:phrase>
     <epp:phrase id="Plugin/Screen/Admin/Indexer:indexer_started">Indexer started successfully.</epp:phrase>
     <epp:phrase id="Plugin/Screen/Admin/Indexer:indexer_stopped">Indexer stopped successfully.</epp:phrase>
-    <epp:phrase id="Plugin/Screen/Admin/Indexer:cant_start_indexer">Unable to start indexer.</epp:phrase>
-    <epp:phrase id="Plugin/Screen/Admin/Indexer:cant_stop_indexer">Unable to stop indexer.</epp:phrase>
+    <epp:phrase id="Plugin/Screen/Admin/Indexer:cant_start_indexer">Unable to start indexer. You should check the log file in <epc:pin name="logpath" /> for more information.</epp:phrase>
+    <epp:phrase id="Plugin/Screen/Admin/Indexer:cant_stop_indexer">Unable to stop indexer. You should check the log file in <epc:pin name="logpath" /> for more information.</epp:phrase>
 
 
     <epp:phrase id="cgi/export:no_id"><p>No valid EPrint ID Number was specified.</p></epp:phrase>
@@ -1028,7 +1032,7 @@ Titles and Help for the System Fields
 
     <epp:phrase id="Plugin/Screen/Review:title">Editorial review</epp:phrase>
 
-    <epp:phrase id="Plugin/Screen/Status:title">Repository status</epp:phrase>
+    <epp:phrase id="Plugin/Screen/Status:title">Status</epp:phrase>
 
     <epp:phrase id="Plugin/Screen/Error:title">Error</epp:phrase>
 
