@@ -1,6 +1,6 @@
 package EPrints::Plugin::Screen::Admin::Indexer;
 
-@ISA = ( 'EPrints::Plugin::Screen::Status' );
+@ISA = ( 'EPrints::Plugin::Screen' );
 
 use strict;
 
@@ -64,7 +64,9 @@ sub action_stop_indexer
 	{
 		$self->{processor}->add_message( 
 			"error", 
-			$self->html_phrase( "cant_stop_indexer" ) 
+			$self->html_phrase( "cant_stop_indexer", 
+				logpath => $self->{session}->make_text( EPrints::Index::logfile() ) 
+			)
 		);
 	}
 }
@@ -92,7 +94,9 @@ sub action_start_indexer
 	{
 		$self->{processor}->add_message( 
 			"error", 
-			$self->html_phrase( "cant_start_indexer" ) 
+			$self->html_phrase( "cant_start_indexer", 
+				logpath => $self->{session}->make_text( EPrints::Index::logfile() ) 
+			)
 		);
 	}
 }
@@ -120,7 +124,7 @@ sub action_force_start_indexer
 	{
 		$self->{processor}->add_message( 
 			"error", 
-			$self->html_phrase( "cant_start_indexer" ) 
+			$self->html_phrase( "cant_start_indexer", logpath => EPrints::Index::logfile() ) 
 		);
 	}
 }
